# overdub

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SETUP.md  STACK.md  overdub.toml  pyproject.toml
.claude/: CHANGELOG.md  DECISIONS.md  INBOX.md  PLAN.md
.claude-tasks/: 2026-07-16-session-f5-deadair-handoff.md  2026-07-17-session-batch-pronouns-segmentation.md  2026-07-17-session-deadair-close.md  2026-07-18-session-gemma-migration.md  2026-07-19-session-translate-bakeoff.md
.claude/skills/overdub-scout/: SKILL.md
.claude/skills/overdub-scout/references/: viewer-profile-prompt.md
.claude/skills/overdub-sonnet-batch/: SKILL.md
.claude/skills/overdub-sonnet-batch/references/: translate-contract.md
.claude/workflows/: scout-summarize.js
bakeoff/: listen.html  texts.json  tts-research-2026-07.md
docs/: repair-fixture.md  russian-tts-guide.md
overdub/: __init__.py  asr.py  cli.py  completeness.py  config.py  normalize.py  pipeline.py  pronounce.py  queueview.py  repair.py  report.py  runreport.py  workdir.py
overdub/stages/: __init__.py  assemble.py  download.py  mux.py  separate.py  synthesize.py  transcribe.py  translate.py  verify.py
overdub/tts/: __init__.py  base.py  f5.py  f5_worker.py  silero.py
scripts/: asr_probe.py  bakeoff2_f5.py  bakeoff2_silero.py  bakeoff3_narrators.py  build_scout.py  build_translation.py  day1_smoke_test.py  dub_blocks.py  exp_clone_synth.py  exp_nfe_sweep.py  lv_pick_refs.py  no_ref_test.py  run_report.py  scout_report.py  silero_test.py  triage_html.py
tests/: test_asr_config.py  test_assemble_cues.py  test_batch_order.py  test_build_translation.py  test_completeness.py  test_download_preflight.py  test_normalize.py  test_pronounce.py  test_repair.py  test_repair_contract.py  test_runreport.py  test_scout.py  test_scout_report.py  test_synthesize_done.py  test_transcribe_guard.py  test_transcribe_merge.py  test_transcribe_split.py  test_translate_partial.py  test_triage_html.py  test_units_speed.py
tools/: renorm_workdir.py
